base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clinic-deploy
  labels:
    myversion: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clinic-front
  template:
    metadata:
      labels:
        app: clinic-front
    spec: # specification du pod
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: springboot
          image: ghcr.io/chaveex/spring-petclinic:4.0.0-SNAPSHOT

          # startupProbe:
          #   httpGet:
          #     path: /actuator/health/readiness   # Endpoint Spring Boot Actuator pour vérifier la disponibilité
          #     port: 8080                               # Port d'écoute du conteneur
          #   initialDelaySeconds: 10                   # Délai avant la première tentative (10s)
          #   periodSeconds: 10                         # Intervalle entre les tentatives (10s)
          #   timeoutSeconds: 2                         # Timeout pour chaque requête HTTP (2s)
          #   failureThreshold: 30                 # Nombre de tentatives avant de considérer le conteneur comme non démarré (30 tentatives, soit 5 minutes)

          # livenessProbe:
          #   httpGet:
          #     path: /actuator/health/liveness    # Endpoint dédié à la vérification de vie (vs. readiness)
          #     port: 8080
          #   initialDelaySeconds: 30                  # Attendre 30s après que le démarrage soit confirmé
          #   periodSeconds: 10                        # Vérifier toutes les 10 secondes
          #   timeoutSeconds: 2
          #   failureThreshold: 3                # Considérer le conteneur comme mort après 3 échecs consécutifs (30s d'indisponibilité)

          # readinessProbe:
          #   httpGet:
          #     path: /actuator/health/readiness   # Même endpoint que startup
          #     port: 8080
          #   initialDelaySeconds: 20                  # Attendre 20s (moins strict que liveness)
          #   periodSeconds: 10
          #   timeoutSeconds: 2
          #   failureThreshold: 6
