base/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: clinic-service
spec:
  selector:
    app: clinic-front
  ports:
    - port: 8080
